--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "cloudinary": "^1.41.3",
     "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
@@ -21,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.20.1",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.11",
     "path": "^0.12.7"
   }
